Fix #122606: fully map Blender's INT8 type to USD's UChar